--- a/02 - JS and CSS Clock/index-START.html
+++ b/02 - JS and CSS Clock/index-START.html
@@ -62,12 +62,51 @@
       background: black;
       position: absolute;
       top: 50%;
+      transform-origin: 100%;
+      transform: rotate(90deg);
+      transition: all 0.05s;
+      transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1);
+    }
+
+    .second-hand {
+      height: 2px;
+      background-color: aquamarine;
+    }
+
+    .min-hand {
+      height: 4px;
+    }
+
+    .hour-hand {
+      width: 35%;
+      top: 50%;
+      right: 50%;
     }
 
   </style>
 
   <script>
+    const secondsHand = document.querySelector('.second-hand');
+    const minutesHand = document.querySelector('.min-hand');
+    const hoursHand = document.querySelector('.hour-hand');
 
+    function setDate() {
+      const date = new Date();
+      const seconds = date.getSeconds();
+
+      const secondsDegrees = ((seconds/60)*360)+90;
+      secondsHand.style.transform = `rotate(${secondsDegrees}deg)`;
+
+      const minutes = date.getMinutes();
+      const minutesDegrees = ((minutes/60)*360)+90;
+      minutesHand.style.transform = `rotate(${minutesDegrees}deg)`;
+
+      const hours = date.getHours();
+      const hoursDegrees = ((hours/12)*360)+90;
+      hoursHand.style.transform = `rotate(${hoursDegrees}deg)`;
+    }
+
+    setInterval(setDate, 1000);
 
   </script>
 </body>
