--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -31,28 +31,57 @@
 
     // Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
+    const fifteen = inventors.filter( inventor => inventor.year < 1600 && inventor.year >= 1500);
 
     // Array.prototype.map()
     // 2. Give us an array of the inventors first and last names
+    const names = inventors.map(inventor => `${inventor.first} ${inventor.last}`)
 
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
+    const birthdates = inventors.sort((a, b) => a.year - b.year);
 
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live all together?
+    const duration = inventors.reduce((sum, inventor) => {
+      return sum + (inventor.passed - inventor.year);
+    }, 0);
 
     // 5. Sort the inventors by years lived
+    const lives = inventors.sort((a, b) => {
+      return (a.passed - a.year) - (b.passed - b.year);
+    })
 
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
-
+    // const category = document.querySelector('.mw-category');
+    // const links = Array.from(category.querySelectorAll('a'));
+    // const deBoulevards = links
+    //                         .map(link => link.innerText)
+    //                         .filter(boulevard => boulevard.includes("de"));
 
     // 7. sort Exercise
     // Sort the people alphabetically by last name
+    const sortedPeople = people.sort();
+
+    // 7.2 sort by first name
+    const peopleToHash = people.map( person => {
+      return { firstName: `${person.split(', ')[1]}`, lastName: `${person.split(', ')[0]}`};
+    });
+    const sortedPeopleBis = peopleToHash.sort((a, b) => a.firstName.localeCompare(b.firstName));
+    const final = sortedPeopleBis.map( person => `${person.lastName}, ${person.firstName}`)
 
     // 8. Reduce Exercise
     // Sum up the instances of each of these
     const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
+    const transportation = data.reduce((object, transport) => {
+      if (!object[transport]) {
+        object[transport] = 0
+      }
+      object[transport]++;
+      return object;
+    }, {})
+    console.log(transportation)
 
   </script>
 </body>
